horizontal scroll table blur fixed position

--- a/client/src/styles/PortfolioTable.scss
+++ b/client/src/styles/PortfolioTable.scss
@@ -19,29 +19,28 @@ $table-border-dark: 1px solid $dark;
     &::after {
       content: "";
       display: block;
-      position: absolute;
+      position: fixed;
       pointer-events: none;
-      top: 0;
+      top: 30%;
       bottom: 0;
       right: 0;
       width: 50px;
       z-index: 100;
       background: -moz-linear-gradient(
         left,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
+        rgba(250, 248, 244, 0) 0%,  /* $justfix-white rgba */
+        rgba(250, 248, 244, 1) 100% 
       ); /* FF3.6-15 */
       background: -webkit-linear-gradient(
         left,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
+        rgba(250, 248, 244, 0) 0%,
+        rgba(250, 248, 244, 1) 100%
       ); /* Chrome10-25,Safari5.1-6 */
       background: linear-gradient(
         to right,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 1) 100%
+        rgba(250, 248, 244, 0) 0%,
+        rgba(250, 248, 244, 1) 100%
       ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
       visibility: visible;
       opacity: 1;
       transition: opacity 0.5s linear;
